# grpc-rust-java-web

./: .gitignore  README.md  clean.sh  compile.sh  install-protoc.sh  run.sh  stop.sh
envoy/: Dockerfile  LICENSE  README.md  commands.sh  envoy-local.yaml  envoy-nodeport.yaml  envoy.yaml  grpc-curl.sh  image-run.sh  run.sh  setup.sh  stop.sh
java/client/: commands.sh  grpc-curl.sh  pom.xml  run.sh
java/client/src/main/java/grpc/java/client/: Client.java
java/client/src/main/proto/: echo.proto
java/client/src/test/java/grpc/java/test/: AppTest.java
java/server/: Dockerfile  README.md  commands.sh  grpc-curl.sh  image-build.sh  java-clusterip.yaml  pom.xml  run.sh  stop.sh
java/server/src/main/java/grpc/java/server/: EchoServer.java  RequestInterceptor.java
rust/client/: Cargo.toml  README.md  build.rs  grpc-curl.sh  run.sh
rust/client/proto/: echo.proto
rust/client/src/: main.rs
rust/server/: Cargo.toml  Dockerfile  README.md  commands.sh  grpc-curl.sh  image-build.sh  run.sh  rust-clusterip.yaml  stop.sh  utils.sh
rust/server/src/: Cargo.toml  main.rs  main.step.14  main_copy.rs
rust/server/src/proto/: say.proto
tomcat/: run.sh  stop.sh
web/: client.js  deploy-app.sh  echo_grpc_web_pb.js  echo_pb.js  gen-js-proto.sh  grpc-curl.sh  index.html  install-protoc.sh  package.json  setup-node-wp.sh  setup.sh  style.css  webpack.config.js
web/tomcat/: run.sh  setup.sh  stop.sh
