[package]
name = "server"
version = "0.1.0"
authors = ["Ratul Buragohain <ratul75@hotmail.com>"]
edition = "2018"

[dependencies]
prost = "0.7.0"
tonic = "0.4.2"
hostname = "0.3.1"
tokio = {version="1.5.0",features = ["macros", "rt-multi-thread"]}
futures = "0.3.14"
[build-dependencies]
tonic-build = "0.4.2"
